# crayPatToy

./: CMakeLists.txt  Makefile  test.py
src/: bindings.cpp
src/bindings/: bindings.cpp
src/core/: cptoy.cu  cptoy.h
